[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "noteburst"
description = "Notebook execution service for the Rubin Science Platform."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    # These dependencies are for fastapi including some optional features.
    "fastapi",
    "gunicorn",
    "starlette",
    "uvicorn[standard]",

    # Other dependencies.
    "aioredlock",
    "safir[arq,kafka]>=13.0.0",
    "pydantic",
    "pydantic_settings",
    "PyYAML",
    "rubin-nublado-client>=8.12.0",
    "httpx",
    "websockets",
    "humanize",
    "sentry-sdk",

    # aoiredlock has an undeclared dependency on distutils, which is not installed
    # automatically by uv.
    "setuptools",
]
dynamic = ["version"]

[tool.uv.sources]
rubin-nublado-client = { git = "https://github.com/lsst-sqre/nublado.git", branch = "tickets/DM-52391/client-sentry", subdirectory = "client"}

[project.scripts]
noteburst_publish_periodic_metrics = "noteburst.periodic_metrics:publish_periodic_metrics"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "coverage[toml]",
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "uvicorn",
    "respx",
    "types-PyYAML",
]

lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff",
]

typing = [
    "mypy",
]

tox = [ "tox",
    "tox-uv",
]

docs = [
    "documenteer[guide]",
    "scriv"
]

[project.urls]
Homepage = "https://noteburst.lsst.io"
Source = "https://github.com/lsst-sqre/noteburst"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.coverage.run]
parallel = true
branch = true
source = ["noteburst"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
python_files = ["tests/*.py", "tests/*/*.py"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"

# The rule used with Ruff configuration is to disable every lint that has
# legitimate exceptions that are not dodgy code, rather than cluttering code
# with noqa markers. This is therefore a reiatively relaxed configuration that
# errs on the side of disabling legitimate lints.
#
# Reference for settings: https://beta.ruff.rs/docs/settings/
# Reference for rules: https://beta.ruff.rs/docs/rules/
[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.extend-per-file-ignores]
"src/noteburst/handlers/**" = [
    "D401",    # FastAPI handler docstrings may be API docs
]
"tests/**" = [
    "T201",    # tests are allowed to use print
]

[tool.ruff.lint.isort]
known-first-party = ["noteburst", "tests"]
split-on-trailing-comma = false
